--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Curso de JavaScript</title>
 </head>
 <body>
-    <h1>Aulas e Exercícios em JavaScript</h1>
+    <h1>Aulas em JavaScript</h1>
     <hr>
-    <p><a href="./aula04/ex001.html">Aula 04 - Ex001</a></p>
+    <h2>Exercícios</h2>
+    <p><a href="./exercicios/aula04/ex001.html">Aula 04 - Ex001</a></p>
+    <p><a href="./exercicios/aula05/ex002.html">Aula 05 - Ex002</a></p>
+    <h2>Desafios</h2>
+    <p>Aguardando Novos Desafios</a></p>
 </body>
 </html>
