--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -1,6 +1,4 @@
-# site-hello-javascript
-
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -16,4 +14,4 @@
     <h2>Título</h2>
     <p>Lorem</p>
 </body>
-</html> -->
+</html>
