Update Aula05 Variáveis e Tipos Primitivos

--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -8,10 +8,35 @@
     <title>Aula 05 - Ex002</title>
 </head>
 <body>
-    <h1>Exércio 002</h1>
+    <h1>Variáveis e Tipos Primitivos em JavaScript</h1>
     <p><a href="../../index.html">Voltar para HOME</a></p>
     <hr>
-    <h2>Título</h2>
-    <p>Lorem</p>
+    <h2>Variáveis - Basicamente servem para guardar dados</h2>
+    <p><strong>var</strong> - serve para armazenar qualquer tipo de dado, os chamados tipos primitívos, em variáveis, que são desde os primários como 'Strings' ou cadeia de caracteres, 'Number', 'Infinity', 'NaN', 'Boolean True and False' e outros como 'null' que é um obejto para o JavaScript, 'undefined', 'object', 'array' ou vetor da programção e até tipos complexos como estruturas criadas pelo desenvolvedor como uma 'function'.<br><br> 
+    Nota: usamos o command typeof para verificar a variável utilizada.</p>
+    <p><strong>let</strong> - é muito semelhante ao var, no sentido de que podemos instanciar e armazenar qualquer tipo de objeto nelas, mas uma vez criadas as variáveis, quando utilizamos o let os seus valores podem ser sobrescritos, até mesmo por outros tipos de dados.<br><br> 
+    Nota: let significa do inglês letting or to allow or permit, ou seja, deixa passar ou permita.</p>
+    <p><strong>cosnt</strong> - funciona de forma análoga aos demais, entretanto, uma vez que o valor foi atribuído à variável, ele não pode ser modificado, ou seja, a variável é constante.</p>
+    <h2>Nome da Variável ou Identificador da Variável</h2>
+    <p>O nome da variável chamamos de identificador com as regras abaixo definidas</p>
+    <p>Para escrever nomes de variáveis:</p>
+    <ol>
+        <li>podemos começar com letras, $ ou _
+        <li>podemos usar letras e números
+        <li>podemos usar acentos e símbolos
+        <li>NÃO PODEM começar com números
+        <li>NÃO PODE conter espaços
+        <li>NAÕ PODE usar palavras reservadas como function ou alert ou var entres outras
+    </ol>
+    <p>NOTA: maiúsculas e minúsculas fazem diferença na hora de criar uma variável.</p>
+    <p>NOTA: é boa prática criar identificador de variáveis com nomes que sejam entendiveis para as próximas pessoas que forem analisar o código. Nomes coerentes para as variáveis coerentes.</p>
+    <script>
+        var n1 = 5 // n1 recebe 5
+        var n2 = 8.5 // n2 recebe 8.5
+        var n3 = 15 // n3 recebe 15
+        var s1 = "JavaScript" // s1 recebe JavaScript
+        var s2 = 'Curso' //s2 recebe Curso
+        var s3 = `Marcelo` // s3 recebe Marcelo
+    </script>
 </body>
 </html>
