--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <h1>Aulas em JavaScript</h1>
     <hr>
     <h2>Exercícios</h2>
-    <p><a href="./exercicios/aula04/ex001.html">Aula 04 - Ex001</a></p>
-    <p><a href="./exercicios/aula05/ex002.html">Aula 05 - Ex002</a></p>
+    <p><a href="./exercicios/aula04/ex001.html">Aula 04 - Ex001 - Hello World</a></p>
+    <p><a href="./exercicios/aula05/ex002.html">Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a></p>
+    <p><a href="./exercicios/aula06/ex003.html">Aula 05 - Ex003 - </a></p>
     <h2>Desafios</h2>
     <p>Aguardando Novos Desafios</a></p>
 </body>
