--- a/exercicios/aula06/ex003.html
+++ b/exercicios/aula06/ex003.html
@@ -1,6 +1,3 @@
-# site-hello-javascript
-
-<!--
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -8,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Aula 00 - Ex0002</title>
+    <title>Aula 06 - Ex003</title>
 </head>
 <body>
-    <h1>Exércio 000</h1>
+    <h1>Tratamento de Dados</h1>
     <p><a href="../../index.html">Voltar para HOME</a></p>
     <hr>
     <h2>Título</h2>
     <p>Lorem</p>
 </body>
 </html>
--->
