RE Initial commit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,25 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Curso de JavaScript</title>
 </head>
+
 <body>
     <h1>Aulas em JavaScript</h1>
     <hr>
-    <h2>Exercícios</h2>
+    <h2>Exercícios em JavaScript</h2>
     <p><a href="./exercicios/aula04/ex001.html">Aula 04 - Ex001 - Hello World</a></p>
     <p><a href="./exercicios/aula05/ex002.html">Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a></p>
-    <p><a href="./exercicios/aula06/ex003.html">Aula 05 - Ex003 - </a></p>
-    <h2>Desafios</h2>
-    <p>Aguardando Novos Desafios</a></p>
+    <p><a href="./exercicios/aula06/ex003.html">Aula 06 - Ex003 - Tratamentos de Dados</a></p>
+    <p><a href="./exercicios/aula06/ex004.html">Aula 06 - Ex004 - Strings</a></p>
+    <p><a href="./exercicios/aula07/ex005.html">Aula 06 - Ex004 - Operadores</a></p>
+    <h2>Desafios em JavaScript</h2>
+    <p>Aguardando Novos Desafios</p>
+    <h2>Imersão Dev em JavaScript</h2>
+    <p><a href="./imersao/aula01/">Conversor de Moedas</a></p>
+    <p><a href="./imersao/aula02/">Calculadora</a></p>
+    <hr>
+    <footer>
+        <p>Estudos em JavaScript por <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a></p>
+    </footer>
 </body>
+
 </html>
