--- a/exercicios/aula04/ex001.html
+++ b/exercicios/aula04/ex001.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,32 @@
     <link rel="stylesheet" href="../../css/style.css">
     <title>Aula 04 - Ex 001</title>
 </head>
+
 <body>
-    <h1>Hello World on JavaScript</h1>
+    <h1>Hello World on JavaScript - Aula 04 - Ex 001</h1>
     <p><a href="../../index.html">Voltar para HOME</a></p>
     <hr>
-    <h2>Olá, Mundo !</h2>
-    <p>Já me livrei dessa tarefa.</p>
+    <h2>Olá, Mundo or Hello World !</h2>
+    <p>Ufa!!! Já me livrei dessa tarefa !</p>
     <script>
-        window.alert('Hello World on ALERT !');
-        // Entre aspas simples fica a String que é uma cadeia de caracteres ou uma sequência de caracteres, geralmente utilizada para representar palavras, frases ou textos de um programa.
-        // A String pode ficam entre entre aspas que podem ser ‘aspas simples’, “aspas duplas” ou `crases` .
-        window.confirm('Você gosta de JavaScript?')
-        window.prompt('Qual é seu nome?')
-        document.write('<p>Hello World on PAGE by JavaScript</p>')
-        /* document.body.style.backgroundColor = 'red' */
+        alert('Hello World on ALERT !')
+        //window.alert('Hello World on ALERT !')
+        // Entre aspas simples fica a String que é cadeia de caracteres ou uma sequência de caracteres, geralmente utilizada para representar números, palavras, frases ou textos de um programa.
+        // A String pode ficam entre entre aspas que podem ser ‘aspas simples’, “aspas duplas” ou entre `crase`.
+        confirm('Você gosta de JavaScript?')
+        //window.confirm('Você gosta de JavaScript?')
+        var name = prompt('Qual é seu nome?')
+        document.write(`<p>Hello World to ${name} on JavaScript by Marcelo I Campos</p>`)
+        //window.prompt('Qual é seu nome?')
+        //document.write('<p>Hello World on PAGE by JavaScript</p>')
+        /*
+        document.body.style.backgroundColor = 'red'
+        */
     </script>
+    <hr>
+    <footer>
+        <p>Estudos em JavaScript por <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a></p>
+    </footer>
 </body>
+
 </html>
