--- a/exercicios/aula06/ex003.html
+++ b/exercicios/aula06/ex003.html
@@ -8,10 +8,53 @@
     <title>Aula 06 - Ex003</title>
 </head>
 <body>
-    <h1>Tratamento de Dados</h1>
+    <h1>Tratamento de Dados - Aula 06 - Ex003</h1>
     <p><a href="../../index.html">Voltar para HOME</a></p>
     <hr>
-    <h2>Título</h2>
-    <p>Lorem</p>
+    <h2>Principais tipos primitivos</h2>
+    <p>Nota: existem outros que estão relacionados na aula 06</p>
+    <p>NUMBER - para converter um number para string usamos String(n) ou n.toString()</p>
+    <p>STRING - para converter uma string em número inteiro usamos o parserInt(n) e o parseFloat(n) para converter num número real, ou simplesmente usamos Number(n).</p>
+    <p>
+        Nota: TEMPLATE STRING OU MODELO DE STRING, podemos concatenar várias strings usando a template string que fica entre crase e cada variável é retornada por uma ${dentro de colchetes} ou também chamado PLACEHOLDER ${}.<br>
+        Template String (`String ${} String ${}`)
+        <pre>
+            <code>
+                var nome = marcelo
+                var idade = 42
+                document.write(`meu nome é ${nome} tenho ${idade} anos`)
+                irá retornar: meu nome é marcelo tenho 42 anos
+            </code>
+        </pre>
+    </p>
+    <p>Boolean - que basicamente comporta valores lógicos como true or false.</p>
+     <div id="nome">
+        <script>
+            var n1 = parseFloat(window.prompt('Digite um número qualquer')) // n1 recebe valor string
+            var n2 = parseFloat(window.prompt('Digite outro número')) // n2 recebe valor string
+            var s = n1 + n2
+            // var s = parseFloat(n1) + parseFloat(n2) pode ser assim também se retirar o parse nas variáveis anteriores
+            // para converter uma string em número inteiro usamos o Number.parseInt(n) ou simplesmente parseInt
+            // para converter uma string em número real usamos o Number.parseFloat(n) ou simplesmente parseFloat
+            // PODEMOS TAMBÉM usar somente Number(n) e o JavaScript irá entender que é um número se quiser especificar use o parseInt ou o parseFloat
+            window.alert('A soma dos números é: ' + String(s))
+            var nome = window.prompt('Qual é o seu nome?')
+            // a variável nome recebe o que for escrito na função window.prompt
+            // podemos também usar o let
+            var idade = window.prompt('Qual é a sua idade?')
+            window.alert('É uma grande prazer te conhecer, ' + nome + '!')
+            // usamos o símbolo + para concatenar strings de poucas letras ou poucas palavras ou até concatenar números
+            // string + string => concatenação
+            // number + number => adição, mas devemos declarar a conversão com parseInt ou parseFloat para considerar números
+            document.write('Olá ' + nome + ', seja bem vindo ! ')
+            document.write('A soma de: ' + n1 + ' + ' + n2 + ' é igual ' + String(s) + '. ' )
+            document.write(`Seu nome é ${nome} e você tem ${idade} anos de idade!`)
+            // a função document.write irá escrever a variável nome
+        </script>
+    </div>
+    <hr>
+    <footer>
+        <p>Estudos em JavaScript por <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a></p>
+    </footer>
 </body>
 </html>
