--- a/exercicios/aula04/ex001.html
+++ b/exercicios/aula04/ex001.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/style.css">
-    <title>Aula 04 - Ex 001</title>
-</head>
-
-<body>
-    <h1>Hello World on JavaScript - Aula 04 - Ex 001</h1>
-    <p><a href="../../index.html">Voltar para HOME</a></p>
-    <hr>
-    <h2>Olá, Mundo or Hello World !</h2>
-    <p>Ufa!!! Já me livrei dessa tarefa !</p>
-    <script>
-        alert('Hello World on ALERT !')
-        //window.alert('Hello World on ALERT !')
-        // Entre aspas simples fica a String que é cadeia de caracteres ou uma sequência de caracteres, geralmente utilizada para representar números, palavras, frases ou textos de um programa.
-        // A String pode ficam entre entre aspas que podem ser ‘aspas simples’, “aspas duplas” ou entre `crase`.
-        confirm('Você gosta de JavaScript?')
-        //window.confirm('Você gosta de JavaScript?')
-        var name = prompt('Qual é seu nome?')
-        document.write(`<p>Hello World to ${name} on JavaScript by Marcelo I Campos</p>`)
-        //window.prompt('Qual é seu nome?')
-        //document.write('<p>Hello World on PAGE by JavaScript</p>')
-        /*
-        document.body.style.backgroundColor = 'red'
-        */
-    </script>
-    <hr>
-    <footer>
-        <p>Estudos em JavaScript por <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a></p>
-    </footer>
-</body>
-
+    <head>
+        <meta name="description" content="Web tutorials" />
+        <meta name="keywords" content="HTML, CSS, JavaScript" />
+        <meta name="author" content="Marcelo Ildefonso Campos" />
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../../css/style.css" />
+        <title>JavaScript - Aula 04 - Ex 001</title>
+    </head>
+    <body>
+        <main>
+            <h1>Hello World on JavaScript - Aula 04 - Ex 001</h1>
+            <p><a href="../../index.html">Voltar para HOME</a></p>
+            <h2>Olá, Mundo or Hello World !</h2>
+            <p>Ufa!!! Já me livrei dessa tarefa !</p>
+            <script>
+                alert('Hello World on ALERT !')
+                //window.alert('Hello World on ALERT !')
+                // Entre aspas simples fica a String que é cadeia de caracteres ou uma sequência de caracteres, geralmente utilizada para representar números, palavras, frases ou textos de um programa.
+                // A String pode ficam entre entre aspas que podem ser ‘aspas simples’, “aspas duplas” ou entre `crase`.
+                confirm('Você gosta de JavaScript?')
+                //window.confirm('Você gosta de JavaScript?')
+                var name = prompt('Qual é seu nome?')
+                document.write(
+                    `<p>Hello World to ${name} on JavaScript by Marcelo I Campos</p>`
+                )
+                //window.prompt('Qual é seu nome?')
+                //document.write('<p>Hello World on PAGE by JavaScript</p>')
+                /*
+            document.body.style.backgroundColor = 'red'
+            */
+            </script>
+        </main>
+        <div class="foot">
+            <hr />
+            <footer>
+                <p>
+                    Estudos em HTML5, CSS3 E JAVASCRIPT por
+                    <a href="https://marceloicampos.com/about" target="_blank"
+                        >Marcelo Ildefonso Campos</a
+                    >
+                </p>
+            </footer>
+        </div>
+    </body>
 </html>
