--- a/exercicios/aula08/ex006.html
+++ b/exercicios/aula08/ex006.html
@@ -1,14 +1,3 @@
-# Aulas, Anotações, Exercícios, Desafios
-
-## Curso JavaScript do CeV
-
-## Projeto site-hello-javascript
-
-Repositório com atividades do **Curso de JavaScript**.
-
-Html base para aulas de JavaScript
-
-<!--
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -19,23 +8,23 @@ Html base para aulas de JavaScript
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../../css/style.css" />
-        <title>JavaScript - Aula 00 - Ex 000</title>
+        <title>JavaScript - Aula 08 - Ex006</title>
     </head>
     <body>
         <main>
-            <h1>Título Aula - Aula 00 - Ex 000</h1>
+            <h1>Operadores - Parte 02 - Aula 08 - Ex006</h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
-            <h2>Título Exercício</h2>
-            <p>Parágrafo</p>
-            <script>
-            </script>
+            <h2>Operadores</h2>
+            <p>Operadores</p>
+            <script></script>
         </main>
         <div class="foot">
             <hr />
             <footer>
                 <p>
-                    Estudos em HTML5, CSS3 E JAVASCRIPT por
-                    <a href="https://marceloicampos.com/about" target="_blank"
+                    Estudos em HTML5, CSS3 E JAVASCRIPT por<a
+                        href="https://marceloicampos.com/about"
+                        target="_blank"
                         >Marcelo Ildefonso Campos</a
                     >
                 </p>
@@ -43,4 +32,3 @@ Html base para aulas de JavaScript
         </div>
     </body>
 </html>
--->
