--- a/index.html
+++ b/index.html
@@ -1,29 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Curso de JavaScript</title>
-</head>
-
-<body>
-    <h1>Aulas em JavaScript</h1>
-    <hr>
-    <h2>Exercícios em JavaScript</h2>
-    <p><a href="./exercicios/aula04/ex001.html">Aula 04 - Ex001 - Hello World</a></p>
-    <p><a href="./exercicios/aula05/ex002.html">Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a></p>
-    <p><a href="./exercicios/aula06/ex003.html">Aula 06 - Ex003 - Tratamentos de Dados</a></p>
-    <p><a href="./exercicios/aula06/ex004.html">Aula 06 - Ex004 - Strings</a></p>
-    <p><a href="./exercicios/aula07/ex005.html">Aula 06 - Ex004 - Operadores</a></p>
-    <h2>Desafios em JavaScript</h2>
-    <p>Aguardando Novos Desafios</p>
-    <hr>
-    <footer>
-        <p>Estudos em JavaScript por <a href="https://marceloicampos.com/about" target="_blank">Marcelo Ildefonso Campos</a></p>
-    </footer>
-</body>
-
+    <head>
+        <meta name="description" content="Web tutorials" />
+        <meta name="keywords" content="HTML, CSS, JavaScript" />
+        <meta name="author" content="Marcelo Ildefonso Campos" />
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>Curso de JavaScript</title>
+    </head>
+    <body>
+        <main>
+            <h1>&#X1F310; SITE HELLO JAVASCRIPT</h1>
+            <h2 style="text-align: center">Quem sou eu?</h2>
+            <img
+                class="foto"
+                src="./imagens/celo_cris_png_150.png"
+                alt="foto marcelo campos e cristiane campos"
+            />
+            <div>
+                <p>
+                    Meu nome é <strong>Marcelo I Campos</strong>, sou estudante
+                    aficionado de HTML, CSS e JAVASCRIPT. Aprendendo (aos 40
+                    anos de vida) a programar e desenvolver. Veja meus estudos
+                    nos links abaixo e obrigado!
+                </p>
+            </div>
+            <p>
+                &gt; SOBRE quem sou eu
+                <a href="https://marceloicampos.com/about" target="_blank">
+                    CLIQUE AQUI</a
+                >
+            </p>
+            <p>
+                <img
+                    class="logo"
+                    src="./imagens/icone_arroba.png"
+                    alt="ícone arroba de e-Mail"
+                />
+                Meu e-Mail marceloicampos@outlook.com &gt; &gt; &gt;
+                <a href="mailto:marceloicampos@outlook.com">
+                    mande um e-Mail pra mim clicando aqui.</a
+                >
+            </p>
+            <h1>Aulas em JavaScript</h1>
+            <h2>Exercícios em JavaScript</h2>
+            <p>
+                <a href="./exercicios/aula04/ex001.html"
+                    >Aula 04 - Ex001 - Hello World</a
+                >
+            </p>
+            <p>
+                <a href="./exercicios/aula05/ex002.html"
+                    >Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a
+                >
+            </p>
+            <p>
+                <a href="./exercicios/aula06/ex003.html"
+                    >Aula 06 - Ex003 - Tratamentos de Dados</a
+                >
+            </p>
+            <p>
+                <a href="./exercicios/aula06/ex004.html"
+                    >Aula 06 - Ex004 - Strings</a
+                >
+            </p>
+            <p>
+                <a href="./exercicios/aula07/ex005.html"
+                    >Aula 07 - Ex005 - Operadores - Parte 01</a
+                >
+            </p>
+            <p>
+                <a href="./exercicios/aula08/ex006.html"
+                    >Aula 08 - Ex006 - Operadores - Parte 02</a
+                >
+            </p>
+            <h2>Desafios em JavaScript</h2>
+            <p><a href="">Aguardando Novos Desafios</a></p>
+        </main>
+        <div class="foot">
+            <hr />
+            <footer>
+                <p>
+                    Estudos em HTML5, CSS3 E JAVASCRIPT por
+                    <a href="https://marceloicampos.com/about" target="_blank"
+                        >Marcelo Ildefonso Campos</a
+                    >
+                </p>
+            </footer>
+        </div>
+    </body>
 </html>
