tag correction <em></em> on the script code

--- a/exercicios/aula06/ex004.html
+++ b/exercicios/aula06/ex004.html
@@ -49,7 +49,7 @@
                             nome.toLowerCase() +
                             ' tem ' +
                             nome.length +
-                            ' letras.<em>'
+                            ' letras.</em>'
                     )
                 </script>
             </div>
