--- a/exercicios/aula04/ex001.html
+++ b/exercicios/aula04/ex001.html
@@ -18,20 +18,18 @@
             <p>Ufa!!! Já me livrei dessa tarefa !</p>
             <script>
                 alert('Hello World on ALERT !')
-                //window.alert('Hello World on ALERT !')
+                // window.alert('Hello World on ALERT !')
                 // Entre aspas simples fica a String que é cadeia de caracteres ou uma sequência de caracteres, geralmente utilizada para representar números, palavras, frases ou textos de um programa.
                 // A String pode ficam entre entre aspas que podem ser ‘aspas simples’, “aspas duplas” ou entre `crase`.
                 confirm('Você gosta de JavaScript?')
-                //window.confirm('Você gosta de JavaScript?')
+                // window.confirm('Você gosta de JavaScript?')
                 var name = prompt('Qual é seu nome?')
                 document.write(
                     `<p>Hello World to ${name} on JavaScript by Marcelo I Campos</p>`
                 )
-                //window.prompt('Qual é seu nome?')
-                //document.write('<p>Hello World on PAGE by JavaScript</p>')
-                /*
-            document.body.style.backgroundColor = 'red'
-            */
+                // window.prompt('Qual é seu nome?')
+                // document.write('<p>Hello World on PAGE by JavaScript</p>')
+                // document.body.style.backgroundColor = 'red'
             </script>
         </main>
         <div class="foot">
