--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -81,7 +81,7 @@
             </p>
             <p>
                 NOTA: é boa prática criar identificador de variáveis com nomes
-                que sejam entendíveis para as próximas pessoas que forem
+                que sejam entendidas para as próximas pessoas que forem
                 analisar o código. Nomes coerentes para as variáveis coerentes.
             </p>
             <script>
