--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h2 style="text-align: center">Quem sou eu?</h2>
             <img
                 class="foto"
-                src="./imagens/celo_cris_png_150.png"
-                alt="foto marcelo campos e cristiane campos"
+                src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Javascript-shield.png"
+                alt="logo javascript"
             />
             <div>
                 <p>
