--- a/exercicios/aula06/ex004.html
+++ b/exercicios/aula06/ex004.html
@@ -19,9 +19,9 @@
                 ATRIBUTOS DE STRING<br />
                 <strong>s.length</strong> diz quantos caracteres tem uma
                 string<br />
-                <strong>s.toUpperCase()</strong> colocar a string para caixa
+                <strong>s.toUpperCase()</strong> coloca a string para caixa
                 alta<br />
-                <strong>s.toLowerCase()</strong> colocar a string em letras
+                <strong>s.toLowerCase()</strong> coloca a string em letras
                 minúsculas<br />
             </p>
             <p>
@@ -42,7 +42,7 @@
                     document.write(
                         `Seu nome ${nome.toUpperCase()} tem ${
                             nome.length
-                        } letras.<br> `
+                        } letras.<br />`
                     )
                     document.write(
                         '<em>Seu nome ' +
