--- a/exercicios/aula05/ex002.html
+++ b/exercicios/aula05/ex002.html
@@ -17,8 +17,8 @@
             </h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
             <h2>
-                Variáveis são objetos em programação que serve basicamente
-                servem para guardar dados
+                Variáveis são objetos em programação que servem basicamente para
+                guardar dados
             </h2>
             <p>
                 Nota: uma variável declarada usando a declaração var ou let sem
@@ -30,17 +30,21 @@
             </p>
             <p>
                 <strong>var</strong> - serve para armazenar qualquer tipo de
-                dado, os chamados <strong>tipos primitivos</strong>, em
-                variáveis, que são desde os primários como 'Strings' ou cadeia
-                de caracteres, 'Number', 'Infinity', 'NaN', 'Boolean True and
-                False' e outros como 'null' que é um objeto para o JavaScript,
-                'undefined', 'object', 'array' ou vetor da programação e até
-                tipos complexos como estruturas criadas pelo programador como
-                uma 'function'.<br /><br />
-                Nota: pode ser usada para declarar tanto variáveis locais,
+                dado, &lpar;os chamados <strong>tipos primitivos</strong>&rpar;
+                em variáveis, que são desde os primários como 'Strings' ou
+                cadeia de caracteres, 'Number', 'Infinity', 'NaN', 'Boolean True
+                and False' e outros como 'null' que é um objeto para o
+                JavaScript, 'undefined', 'object', 'array' ou vetor da
+                programação e até tipos complexos como estruturas criadas pelo
+                programador como uma 'function'.<br /><br />
+                Nota: o var pode ser usado para declarar tanto variáveis locais,
                 dentro da função, como variáveis globais, fora da função.<br /><br />
                 Nota: usamos o command typeof para verificar a variável
-                utilizada.
+                utilizada. Exemplos: typeof 6 retorna um number, mas typeof '6'
+                retorna uma string 6. typeof [] é um array, para o JS retorna um
+                objeto e typeof {} retorna um objeto. Notas: null é objeto,
+                undefined é undefined, function(){} é function, NaN e infinity
+                são number e true ou false são boolean.
             </p>
             <p>
                 <strong>let</strong> - é muito semelhante ao var, no sentido de
@@ -60,7 +64,7 @@
             </p>
             <h2>Nome da Variável ou Identificador da Variável</h2>
             <p>
-                O nome da variável chamamos de identificador com as regras
+                O nome da variável chamamos de identificador segue as regras
                 abaixo definidas
             </p>
             <p>Para escrever nomes de variáveis:</p>
@@ -68,7 +72,7 @@
                 <li>podemos começar com letras, $ ou _</li>
                 <li>podemos usar letras e números</li>
                 <li>podemos usar acentos e símbolos</li>
-                <li>NÃO PODEM começar com números</li>
+                <li>NÃO PODE começar com números</li>
                 <li>NÃO PODE conter espaços</li>
                 <li>
                     NAÕ PODE usar palavras reservadas como function ou alert ou
@@ -81,17 +85,26 @@
             </p>
             <p>
                 NOTA: é boa prática criar identificador de variáveis com nomes
-                que sejam entendidas para as próximas pessoas que forem
-                analisar o código. Nomes coerentes para as variáveis coerentes.
+                que sejam entendidas para as próximas pessoas que forem analisar
+                o código. Nomes coerentes para as variáveis coerentes.
             </p>
-            <script>
-                var n1 = 5 // n1 recebe 5
-                var n2 = 8.5 // n2 recebe 8.5
-                var n3 = 15 // n3 recebe 15
-                var s1 = 'JavaScript' // s1 recebe JavaScript
-                var s2 = 'Curso' //s2 recebe Curso
-                var s3 = `Marcelo` // s3 recebe Marcelo
-            </script>
+            <p>
+                NOTA: Boa prática é escrever o código JS em camelCaseConvention,
+                ou seja, a primeira letra da primeira palavra do identificador
+                em minúscula e as outras palavras começando com maiúsculas.
+            </p>
+            <p>
+                NOTA: para comentar códigos javascript usamos o // para comentar
+                uma linha e /* */ para comentar diversas linhas.
+            </p>
+            <pre>
+                var n1 = 5 // n1 recebe 5, o number 5 é atribuída a variável n1
+                var n2 = 8.5 // n2 recebe 8.5, o number 8.5 é atribuída a variável n2
+                var n3 = 15 // n3 recebe 15, o number 15 é atribuída a variável n3
+                var s1 = 'JavaScript' // s1 recebe JavaScript, a string JavaScript é atribuída a variável s1
+                var s2 = 'Curso' //s2 recebe Curso, a string Curso é atribuída a variável s2
+                var s3 = `Marcelo` // s3 recebe Marcelo, a string Marcelo é atribuída a variável s3
+            </pre>
         </main>
         <div class="foot">
             <hr />
