--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 >
             </p>
             <h1>Aulas em JavaScript</h1>
-            <h2>Exercícios em JavaScript</h2>
+            <h2>Exercícios em Aulas</h2>
             <p>
                 <a href="./exercicios/aula04/ex001.html"
                     >Aula 04 - Ex001 - Hello World</a
@@ -76,6 +76,8 @@
                     >Aula 08 - Ex006 - Operadores - Parte 02</a
                 >
             </p>
+            <h2>Exercícios em JavaScript</h2>
+            <p><a href="">Aguardando Novos Exercícios</a></p>
             <h2>Desafios em JavaScript</h2>
             <p><a href="">Aguardando Novos Desafios</a></p>
         </main>
