--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
             <h1>Aulas em JavaScript</h1>
             <h2>Exercícios em Aulas</h2>
             <p>
-                <a href="./exercicios/aula04/ex001.html"
+                <a href="./aulas/aula04/ex001.html"
                     >Aula 04 - Ex001 - Hello World</a
                 >
             </p>
             <p>
-                <a href="./exercicios/aula05/ex002.html"
+                <a href="./aulas/aula05/ex002.html"
                     >Aula 05 - Ex002 - Variáveis e Tipos Primitivos</a
                 >
             </p>
             <p>
-                <a href="./exercicios/aula06/ex003.html"
+                <a href="./aulas/aula06/ex003.html"
                     >Aula 06 - Ex003 - Tratamentos de Dados</a
                 >
             </p>
             <p>
-                <a href="./exercicios/aula06/ex004.html"
+                <a href="./aulas/aula06/ex004.html"
                     >Aula 06 - Ex004 - Strings</a
                 >
             </p>
             <p>
-                <a href="./exercicios/aula07/ex005.html"
+                <a href="./aulas/aula07/ex005.html"
                     >Aula 07 - Ex005 - Operadores - Parte 01</a
                 >
             </p>
