--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 >
             </p>
             <p>
-                <a href="./exercicios/aula08/ex006.html"
+                <a href="./aulas/aula08/ex006.html"
                     >Aula 08 - Ex006 - Operadores - Parte 02</a
                 >
             </p>
