--- a/aulas/aula07/ex005.html
+++ b/aulas/aula07/ex005.html
@@ -39,7 +39,7 @@
                     direita quem aparecer primeiro
                 </li>
             </ol>
-            <h2>Atribuição de Variável</h2>
+            <h2>Operadores de Atribuição em Variáveis</h2>
             <p>
                 <strong>Atribuição simples:</strong> quando simplesmente
                 atribuímos um valor ou uma expressão a uma variável, como no
