--- a/aulas/aula08/ex006.html
+++ b/aulas/aula08/ex006.html
@@ -14,12 +14,58 @@
         <main>
             <h1>Operadores - Parte 02 - Aula 08 - Ex006</h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
-            <h2>Operadores</h2>
-            <p>Operadores</p>
+            <h2>Operadores Relacionais</h2>
             <p>
-                <li>=</li>
-                <li>==</li>
-                <li>===</li>
+                <li>&gt; &nbsp;&nbsp;&nbsp;- MAIOR</li>
+                <li>&lt; &nbsp;&nbsp;&nbsp;- MENOR</li>
+                <li>&gt;= &nbsp;- MAIOR OU IGUAL</li>
+                <li>&lt;= &nbsp;- MENOR OU IGUAL</li>
+                <li>== &nbsp;- IGUAL</li>
+                <li>!= &nbsp;&nbsp;- DIFERENTE</li>
+                <li>
+                    === &nbsp;- OPERADOR DE IDENTIDADE RESTRITA, pois verifica
+                    se tem mesmo valor e mesmo tipo. 5 == '5' true | 5 === '5'
+                    false .
+                </li>
+                <li>!=== &nbsp;- podemos chamar de operador NÃO IDÊNTICO</li>
+            </p>
+            <p>
+                NOTA: primeiro realizamos os operadores aritméticos e depois os
+                relacionais
+            </p>
+            <h2>Operadores Lógicos</h2>
+            <p>
+                <li>! &nbsp;&nbsp;&nbsp;&nbsp; - NEGAÇÃO</li>
+                <img src="./images/oper-n.jpg" alt="tabela verdade negação" />
+                <li>&& &nbsp;- E &lpar;CONJUNÇÃO&rpar;</li>
+                <img src="./images/oper-e.png" alt="tabela verdade conjunção" />
+                <li>|| &nbsp;&nbsp;&nbsp; - OU &lpar;DISJUNÇÃO&rpar;</li>
+                <img
+                    src="./images/oper-ou.png"
+                    alt="tabela verdade disjunção"
+                />
+            </p>
+            <p>
+                NOTA: primeiro realizamos os operadores aritméticos, depois os
+                relacionais e depois os lógicos
+            </p>
+            <p>NOTA: primeiro NÃO, depois E e depois OU</p>
+            <h2>Operadores Ternários</h2>
+            <p>
+                <li>nota média &gt;= 7 - bloco de teste</li>
+                <br />
+                <li>? - if - bloco verdadeiro</li>
+                <br />
+                <li><strong>:</strong> &nbsp;- if else - bloco falso</li>
+                <br />
+                <li>
+                    nota média &gt;= 7 <strong>?</strong> "aprovado"
+                    <strong>:</strong> "reprovado"
+                </li>
+            </p>
+            <p>
+                NOTA: Chamamos de ternários porque operamos três vezes na lógica para
+                chegarmos a um resultado
             </p>
             <script></script>
         </main>
