--- a/index.html
+++ b/index.html
@@ -76,6 +76,16 @@
                     >Aula 08 - Ex006 - Operadores - Parte 02</a
                 >
             </p>
+            <p>
+                <a href="./aulas/aula09/ex007.html"
+                    >Aula 09 - Ex007 - Introdução ao DOM - Parte 01</a
+                >
+            </p>
+            <p>
+                <a href="./aulas/aula10/ex008.html"
+                    >Aula 10 - Ex008 - Eventos ao DOM - Parte 02</a
+                >
+            </p>
             <h2>Exercícios em JavaScript</h2>
             <p><a href="">Aguardando Novos Exercícios</a></p>
             <h2>Desafios em JavaScript</h2>
