--- a/aulas/aula11/ex009.html
+++ b/aulas/aula11/ex009.html
@@ -8,11 +8,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../../css/style.css" />
-        <title>JavaScript - Aula 10 - Ex 008</title>
+        <title>JavaScript - Aula 11 - Ex 009</title>
     </head>
     <body>
         <main>
-            <h1>Eventos do DOM - Aula 10 - Ex 008</h1>
+            <h1>Condições - Parte 01 - Aula 11 - Ex 009</h1>
             <p><a href="../../index.html">Voltar para HOME</a></p>
             <h2>Exercícios e Estudos com o DOM</h2>
             <p>Parágrafo</p>
