--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                     >Aula 10 - Ex008 - Eventos ao DOM - Parte 02</a
                 >
             </p>
+            <p>
+                <a href="./aulas/aula11/ex009.html"
+                    >Aula 11 - Ex009 - Condições - Parte 01</a
+                >
+            </p>
             <h2>Exercícios em JavaScript</h2>
             <p><a href="">Aguardando Novos Exercícios</a></p>
             <h2>Desafios em JavaScript</h2>
